# repometrics

./: .gitignore  Cargo.toml  Makefile  TODO.md
.github/workflows/: ci.yml
examples/: metrics.toml  repometrics.toml
examples/a/: Cargo.toml
examples/b/: Cargo.toml
src/: args.rs  cache.rs  config.rs  data.rs  gitlab.rs  main.rs  output.rs
src/output/: markdown.rs  text.rs
