[package]
name = "repometrics"
version = "0.1.0"
edition = "2021"

[dependencies]
anstream = "0.6.11"
anstyle = "1.0.6"
anyhow = "1.0.79"
clap = { version = "4.4.18", features = ["derive"] }
env_logger = "0.11.1"
gitlab = "0.1802.0"
log = "0.4.20"
serde = { version = "1.0.196", features = ["derive"] }
toml = "0.8.10"
